discussion/kv_engine/179286/179286_rev12_discussion.txt
======================================================================================================================
DESCRIPTION:

Move the server interface class includes into a new directory

Change-Id: Id839ab6df2c61328a3a9d6915806f80f83695491

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Ben Huddleston
Date: 2022-09-20 13:02:28.000000000
Message: 
Uploaded patch set 12.
----------------------------------------------------------------------------------------------------------------------
Author: James H
Date: 2022-09-20 13:04:01.000000000
Message: 
Patch Set 12: Code-Review+1
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-09-20 13:35:38.000000000
Message: 
Patch Set 12: Verified-1 Code-Review-1

Build Failed 

https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/20500/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/include/memcached/server_iface/core.h:14:10: error: "memcached/thread_pool_config.h" file not found [clang-diagnostic-error]
#include <memcached/thread_pool_config.h>
         ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/include/memcached/server_iface/document.h:17:10: error: "gsl/gsl-lite.hpp" file not found [clang-diagnostic-error]
#include <gsl/gsl-lite.hpp>
         ^

</pre> ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/20500/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/include/memcached/server_iface/core.h:14:10:
error: "memcached/thread_pool_config.h" file not found [clang-diagnostic-error]
 ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/20500/ )

https://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/23632/ : FAILURE

Failure of GoogleTest "CouchstoreOrMagma/KVStoreErrorInjectionTest.WarmupScanCancelled/persistent_magma_value_only":

<pre>
[ RUN      ] CouchstoreOrMagma/KVStoreErrorInjectionTest.WarmupScanCancelled/persistent_magma_value_only
[2022-09-20T13:24:04.387Z] ../kv_engine/engines/ep/tests/module_tests/kvstore_error_injection_test.cc:970: Failure
[2022-09-20T13:24:04.387Z] Expected equality of these values:
[2022-09-20T13:24:04.387Z]   1
[2022-09-20T13:24:04.387Z]   secondVb->ht.getNumItems()
[2022-09-20T13:24:04.387Z]     Which is: 0
[2022-09-20T13:24:04.387Z] [  FAILED  ] CouchstoreOrMagma/KVStoreErrorInjectionTest.WarmupScanCancelled/persistent_magma_value_only, where GetParam() = "bucket_type=persistent:backend=magma:item_eviction_policy=value_only" (1129 ms)
CouchstoreOrMagma/KVStoreErrorInjectionTest.WarmupScanCancelled/persistent_magma_value_only
</pre>
 ( https://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/23632/ )

https://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/19722/ : SUCCESS

https://cv.jenkins.couchbase.com/job/kv_engine-windows-master/49511/ : SUCCESS

https://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/41614/ : SUCCESS

https://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/10309/ : SUCCESS

https://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/10211/ : SUCCESS

https://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/21863/ : SUCCESS

https://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/22478/ : SUCCESS

https://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/22849/ : SUCCESS

https://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/30877/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
